--- a/.github/workflows/deploy-all.yml
+++ b/.github/workflows/deploy-all.yml
@@ -1,5 +1,5 @@
 name: Prepare Deployment for all branches
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+run-name: ${{ github.actor }} is preparing deployment
 on: [push]
 jobs:
   Explore-GitHub-Actions:
